fixed logo navbar and overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,8 @@
   --font-orbitron: "Orbitron", sans-serif;
   --font-teko: "Teko", sans-serif;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
